@@ -4,7 +4,6 @@ use warnings;
 use Dist::Zilla::Tester;
 use Path::Class;
 use Test::More;
-use Capture::Tiny qw( capture );
 
 # FILENAME: test-kwalitee.t
 # CREATED: 29/08/11 15:36:11 by Kent Fredric (kentnl) <kentfredric@gmail.com>
@@ -30,27 +29,34 @@ END { # Remove (empty) dir created by building the dists
 ok( -e $expected_file, 'test created' );
 chdir $builddir;
 
-my ( $result, $output, $error, $errflags );
-{
-  local $@;
-  local $!;
-  local $?;
-  ( $output, $error ) = capture {
-    $result = system( "RELEASE_TESTING=1 $^X $expected_file" );
-  };
-  $errflags = { '@' => $@, '!' => $!, '?' => $? };
-}
-my $success = 1;
-isnt( $result, 0, 'Test ran, and failed, as intended' ) or do { $success = 0 };
-like( $output, qr/ok.*no_symlinks/m, 'Test dist lacked symlinks' )   or do { $success = 0 };
-like( $output, qr/not ok.*has_readme/m, 'Test dist has no readme' )   or do { $success = 0 };
+SKIP: {
+    skip 'remainder of tests are only run locally', 3
+        unless $ENV{AUTHOR_TESTING} or $ENV{RELEASE_TESTING};
 
-if ( not $success ) {
-  diag explain {
-    'stdout' => $output,
-    'stderr' => $error,
-    'result' => $result,
-    'flags'  => $errflags,
-  };
+    require Capture::Tiny;
+    my ( $result, $output, $error, $errflags );
+    {
+      local $@;
+      local $!;
+      local $?;
+      ( $output, $error ) = Capture::Tiny::capture(sub {
+        $result = system( "RELEASE_TESTING=1 $^X $expected_file" );
+      });
+      $errflags = { '@' => $@, '!' => $!, '?' => $? };
+    }
+    my $success = 1;
+    isnt( $result, 0, 'Test ran, and failed, as intended' ) or do { $success = 0 };
+    like( $output, qr/ok.*no_symlinks/m, 'Test dist lacked symlinks' )   or do { $success = 0 };
+    like( $output, qr/not ok.*has_readme/m, 'Test dist has no readme' )   or do { $success = 0 };
+
+    if ( not $success ) {
+      diag explain {
+        'stdout' => $output,
+        'stderr' => $error,
+        'result' => $result,
+        'flags'  => $errflags,
+      };
+    }
 }
+
 done_testing;
